// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Block /> should match snapshot 1`] = `
<div
  className="recommendationWizard__block"
>
  This go before label
  <p
    className="recommendationWizard__label"
  >
    label
  </p>
</div>
`;

exports[`<Block /> should match snapshot when selected 1`] = `
<div
  className="recommendationWizard__block recommendationWizard__block--selected"
>
  This go before label
  <p
    className="recommendationWizard__label"
  >
    label
  </p>
</div>
`;
